--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="css" href="./resources/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./vendors/css/normalize.css">
+    <title>Healthy Me</title>
 </head>
 <body>
     
