adding css for grids

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="css" href="./resources/css/style.css">
     <link rel="stylesheet" href="./vendors/css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+    <link rel="stylesheet" href="./vendors/css/grid.css">
     <title>Healthy Me</title>
 </head>
 <body>
