--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <title>Healthy Me</title>
   </head>
   <body>
-    <div class="row"><h1>Healthy Me</h1></div>
+    <header>
+      <div class="hero-text-box">
+        <h1>Goodbye junk food. Hello super healthy food.</h1>
+        <a href="#">I’m hungry</a>
+        <a href="#">Show me more</a>
+      </div>
+    </header>
   </body>
 </html>
