--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body>
     <header>
       <div class="hero-text-box">
-        <h1>Goodbye junk food. Hello super healthy food.</h1>
+        <h1>
+          Goodbye junk food.<br />
+          Hello super healthy food.
+        </h1>
         <a href="#">I’m hungry</a>
         <a href="#">Show me more</a>
       </div>
