--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           Goodbye junk food.<br />
           Hello super healthy food.
         </h1>
-        <a href="#">I’m hungry</a>
-        <a href="#">Show me more</a>
+        <a href="#" class="btn btn-full">I’m hungry</a>
+        <a href="#" class="btn btn-ghost">Show me more</a>
       </div>
     </header>
   </body>
